Name:            pulse-simple
Cabal-Version:   >=1.6
Version:         0.1.15
Author:          Daiki Handa, Manuel Bärenz
Maintainer:      programming@manuelbaerenz.de
Synopsis:        Binding to Simple API of pulseaudio
Build-Type:      Simple
License:         BSD3
License-File:    LICENSE
Category:        Sound
Description:
  Binding to the simple version of the client API for the PulseAudio soundserver.
  For more information on the C API, see https://www.freedesktop.org/software/pulseaudio/doxygen/simple.html.
  Although this package does not provide advanced features and some not-so-advanced features like
  volume control, it is enough for simple prototype applications.
  Confirmed to work on Linux with GHC 6.8 to 8.6.
source-repository head
  type:     git
  location: git@github.com:turion/pulse-simple.git

Library
    Extensions: ForeignFunctionInterface
    Extra-Libraries: pulse-simple
    Build-depends:
        base >= 3 && < 5
      , bytestring
    Exposed-Modules: Sound.Pulse.Simple
